# .lian

./: .gitignore  .zshrc  AILeftSidebarTabone.md  README.md  mimeapps.list
btop/: btop.conf
cava/: config_waybar
fastfetch/: config.jsonc
fastfetch/scripts/: fastfetch-age.sh  fastfetch-ip.sh  fastfetch-logo.sh
fcitx5/rime/: default.custom.yaml
gsimplecal/: config
gtk-3.0/: gtk.css  settings.ini
gtk-4.0/: gtk.css  settings.ini
hypr/: hyprland.conf  hyprland.conf.bak  hyprland.lua  hyprlock.conf
hypr/lua/: appearance.lua  autostart.lua  binds.lua  env.lua  input.lua  layouts.lua  nvidia.lua  rules.lua
kanshi/: config
kitty/: kitty.conf
lianwall/: hooks.toml
matugen/: config.toml
matugen/templates/gtk-3.0/: gtk.css
matugen/templates/gtk-4.0/: gtk.css
matugen/templates/qt6ct/: colors.conf
nvim/: init.lua
nvim/lua/core/: autocmds.lua  keymaps.lua  options.lua
nvim/lua/plugins/: init.lua
nvim/sakurine/autoload/: sakurine.vim
nvim/sakurine/colors/: sakurine.vim
qt6ct/: qt6ct.conf
quickshell/: .gitignore  README.md  shell.qml
quickshell/Components/: LayerSurfaceRemapper.qml  SvgIcon.qml
quickshell/JS/: AppManager.js  weather.js
quickshell/Modules/Bar/: Bar.qml
quickshell/Modules/CaptureMenu/: CaptureMenuWindow.qml
quickshell/Modules/Clipboard/: ClipboardPage.qml  ClipboardWindow.qml
quickshell/Modules/DynamicIsland/: DynamicIsland.qml
quickshell/Modules/HotCorner/: HotCornerDetectorWindow.qml
quickshell/Modules/Launcher/: AppPage.qml  EmojiPage.qml  LauncherWindow.qml  UnifiedLauncherWindow.qml
quickshell/Modules/Lock/: Lock.qml  LockSurface.qml
quickshell/Services/: Bluetooth.qml  CavaService.qml  IslandEventCenter.qml  MediaManager.qml  Network.qml  NotificationManager.qml  Updates.qml
quickshell/Widget/: AudioContent.qml  BluetoothContent.qml  NetworkContent.qml  NotificationContent.qml  NotificationCornerWindow.qml  QuickSettings.qml  RightSidebar.qml  UpdatesContent.qml
quickshell/Widget/audio/: VolumeSlider.qml
quickshell/Widget/common/: Theme.qml  WidgetPanel.qml
quickshell/Widget/left_sidebar/: DailyAirQualityTrendPane.qml  DailyForecastTrendCard.qml  DailyWindTrendPane.qml  HourlyAirQualityTrendPane.qml  (+37 more)
quickshell/config/: Colorscheme.qml  DynamicIslandPrefs.qml  LianClawState.qml  NotificationStore.qml  Sizes.qml  WidgetState.qml
quickshell/core/: CMakeLists.txt
quickshell/core/plugin/calendar/: CMakeLists.txt
quickshell/core/plugin/calendar/data/cn/: 2026.json
quickshell/core/plugin/calendar/src/: calendar_day_model.cpp  calendar_day_model.h  calendar_plugin.cpp  calendar_plugin.h
quickshell/core/plugin/clipboard/: CMakeLists.txt
quickshell/core/plugin/clipboard/src/: clipboard_list_model.cpp  clipboard_list_model.h  clipboard_store.cpp  clipboard_store.h
quickshell/core/plugin/lianclaw/: CMakeLists.txt
quickshell/core/plugin/lianclaw/src/: lianclaw_client.cpp  lianclaw_client.h  sse_stream.cpp  sse_stream.h
quickshell/core/plugin/lianwall/: CMakeLists.txt
quickshell/core/plugin/lianwall/src/: lianwall_list_model.cpp  lianwall_list_model.h  lianwall_plugin.cpp  lianwall_plugin.h
quickshell/core/plugin/notif/: CMakeLists.txt
quickshell/core/plugin/notif/src/: notification_list_model.cpp  notification_list_model.h  notification_store.cpp  notification_store.h
quickshell/core/plugin/sysmon/: CMakeLists.txt  cli_test.qml  test.qml
quickshell/core/plugin/sysmon/src/: process_model.cpp  process_model.h  sysmon_plugin.cpp  sysmon_plugin.h
quickshell/core/plugin/weather/: CMakeLists.txt  cli_test.qml
quickshell/core/plugin/weather/src/: weather_list_model.cpp  weather_list_model.h  weather_plugin.cpp  weather_plugin.h
quickshell/core/src/: CMakeLists.txt  openmeteo_client.cpp  openmeteo_client.h  sysmon_backend.cpp  sysmon_backend.h  sysmon_battery.cpp  sysmon_battery.h  sysmon_cpu.cpp  sysmon_cpu.h  sysmon_disk.cpp  sysmon_disk.h  sysmon_gpu.cpp  sysmon_gpu.h  sysmon_load.cpp  sysmon_load.h  sysmon_misc.cpp  sysmon_misc.h  sysmon_net.cpp  sysmon_net.h  sysmon_ram.cpp  sysmon_ram.h  sysmon_temp.cpp  sysmon_temp.h  sysmon_types.h  weather_backend.cpp  weather_backend.h  weather_cache.cpp  weather_cache.h  weather_calculator.cpp  weather_calculator.h  weather_types.cpp  weather_types.h
quickshell/core/src/ipc/: cliphist_watcher.cpp  cliphist_watcher.h
quickshell/core/src/store/: database.cpp  database.h
quickshell/core/src/store/dao/: clipboard_dao.cpp  clipboard_dao.h  notification_dao.cpp  notification_dao.h
quickshell/core/src/util/: image_detect.cpp  image_detect.h
quickshell/licenses/: AnimatedWeatherCards-MIT.txt
quickshell/scripts/: capture.sh  cava.sh  clipboard_dump.py  di_test.sh  lyrics_fetcher.py  qs_workspaces.py  record.sh  update_theme_from_wallpaper.sh  updates_fetch.sh  updates_read.py  wave.sh  wave_mic.sh  wave_sys.sh  weather.py  weather_geocode.py
rofi/: clipboard.rasi  cliphist_rofi.sh  sakurine.rasi
rofi/scripts/: rofi-launcher.sh
swaync/: config.json  style.css
systemd/user/: cliphist-watch.service  fcitx5.service  hypr-event-daemon.service  hysp.service  lian-updates.service  lian-updates.timer  lianwall.service  stalk-hypr.service  swaync.service  tuxedo-tray.service  waybar-lbar.service
waybar/: config.jsonc  lbar  style.css  theme.css
waybar/modules/: backlight.jsonc  battery.jsonc  bluetooth.jsonc  cava.jsonc  clipboard.jsonc  clock.jsonc  cpu.jsonc  gpu.jsonc  logo.jsonc  media.jsonc  memory.jsonc  network.jsonc  pulseaudio.jsonc  tray.jsonc  updates.jsonc  window.jsonc  workspaces.jsonc  ws_current.jsonc
waybar/scripts/: updates_fetch.sh  waybar_bluetooth.sh  waybar_cava.sh  waybar_clock.sh  waybar_clock_toggle.sh  waybar_cpu.sh  waybar_gpu.sh  waybar_media.sh  waybar_media_ctl.sh  waybar_media_fast.sh  waybar_media_focus.sh  waybar_memory.sh  waybar_open_nmtui.sh  waybar_updates.sh  waybar_window.sh  waybar_workspaces_scroll.sh  waybar_ws_current.sh
waybar/style/: animations.css  base.css  islands.css  modules.css  tooltip.css  tray-menu.css
wlogout/: layout  style.css
wlogout/scripts/: logoutlaunch.sh  wlogout.sh
(+73 files in other folders)
